--- a/game.html
+++ b/game.html
@@ -145,6 +145,19 @@
             text-decoration: underline;
         }
 
+        .test-version {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 0.9em;
+            color: #333;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            font-weight: bold;
+        }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -167,6 +180,8 @@
     </style>
 </head>
 <body>
+    <div class="test-version">Test Versie 1</div>
+
     <div class="container">
         <div class="control-panel">
             <h2>Vrij Spelen</h2>
@@ -198,7 +213,6 @@
 
     <div class="credits">
         <p>Credits: Lucas Mangroelal</p>
-
     </div>
 
     <script>
