--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vrij Spelen - Fotosynthese Simulatie</title>
+    <title>SGDC - Fotosynthese Simulatie</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -184,7 +184,7 @@
 
     <div class="container">
         <div class="control-panel">
-            <h2>Vrij Spelen</h2>
+            <h2>SGDC</h2>
             <label>Zonlicht: <span id="sunlight-value">50%</span></label>
             <input type="range" id="sunlight" min="0" max="100" value="50" oninput="updateFlower()">
 
