--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </div>
 
     <div class="feedback-panel" id="feedback-panel">
-        <div id="feedback-message">Pas de schuifbalken aan om de bloem te beïnvloeden.</div>
+        <div id="feedback-message">-.</div>
     </div>
 
     <div class="credits">
