--- a/back-up/index.html
+++ b/back-up/index.html
@@ -208,7 +208,7 @@
     </div>
 
     <div class="feedback-panel" id="feedback-panel">
-        <div id="feedback-message">hier komt feedback--wordt nog aan gewerkt </div>
+        <div id="feedback-message">je zit momenteel op een back-up versie 🚨 er kunnen sommige functies tijdelijk niet werken 🚨</div>
     </div>
 
     <div class="credits">
