--- a/back-up/index.html
+++ b/back-up/index.html
@@ -180,7 +180,7 @@
     </style>
 </head>
 <body>
-    <div class="header">Versie 1.1</div>
+    <div class="header">Versie <-- BACK-UP/div>
 
     <div class="container">
         <div class="control-panel">
