--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                         programList.appendChild(li);
                     });
 
+                    // Doorgaan naar menu.html na succesvolle login
+                    window.location.href = "menu.html"; 
+
                 } else {
                     alert("Ongeldige klascode!");
                 }
