--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         programList.appendChild(li);
                     });
 
-                    // Doorgaan naar /menu na succesvolle login
-                    window.location.href = "/menu"; 
+                    // Doorgaan naar de opgegeven URL na succesvolle login
+                    window.location.href = "https://lucasenlucas.github.io/Fotosynthese-Simulator/menu"; 
 
                 } else {
                     alert("Ongeldige klascode!");
